umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@pubchem_alanine.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C1
order: 1
equivalence_sets:
  - - O(0)
  - - O(1)
  - - N(2)
  - - C(3)
  - - C(4)
  - - C(5)
  - - H(6)
  - - H(7)
  - - H(8)
  - - H(9)
  - - H(10)
  - - H(11)
  - - H(12)
