umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@pubchem_carbon_suboxide.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D0h
order: 4
equivalence_sets:
  - - O(0)
    - O(1)
  - - C(2)
  - - C(3)
    - C(4)
