umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@pubchem_hydrogen_chloride.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C0v
order: 2
equivalence_sets:
  - - Cl(0)
  - - H(1)
