umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@pubchem_hydrogen_cyanide.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C0v
order: 2
equivalence_sets:
  - - N(0)
  - - C(1)
  - - H(2)
