umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@pubchem_iodine.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D∞h
order: 0
equivalence_sets:
  - - I(0)
    - I(1)
