umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@pubchem_proline.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C1
order: 1
equivalence_sets:
  - - O(0)
  - - O(1)
  - - N(2)
  - - C(3)
  - - C(4)
  - - C(5)
  - - C(6)
  - - C(7)
  - - H(8)
  - - H(9)
  - - H(10)
  - - H(11)
  - - H(12)
  - - H(13)
  - - H(14)
  - - H(15)
  - - H(16)
