umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@pubchem_spiropentane.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D2d
order: 8
equivalence_sets:
  - - C(0)
  - - C(1)
    - C(2)
    - C(3)
    - C(4)
  - - H(5)
    - H(6)
    - H(7)
    - H(8)
    - H(9)
    - H(10)
    - H(11)
    - H(12)
